--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^10.18.0",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
