--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^10.18.0",
+    "lucide-react": "^0.563.0",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
